# Game-of-Fifteen

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  board.cpp  board.h  boardState.cpp  boardState.h  grafika.cpp  grafika.h  graphics.cpp  graphics.h  klocek.cpp  klocek.h  main.cpp  mainWindow.cpp  mainWindow.h  mainwindow.cpp  mainwindow.h  plansza.cpp  plansza.h  stanplanszy.cpp  stanplanszy.h  tile.cpp  tile.h
